A3/tests/LongFloatIntArith.c.err
sclp error: File: tests/LongFloatIntArith.c, Line: 21: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 22: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 23: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 24: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 25: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 26: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 27: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 28: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 29: Assignment statement data type not compatible
sclp error: File: tests/LongFloatIntArith.c, Line: 30: Assignment statement data type not compatible
