A3/tests/LongFloatIntArith.c.myerr
cs316: Error: Line 21: Data Type not compatabile in the assignment
